# data_anatomy

./: .gitignore  README.md  benchmark_config.yaml  benchmark_evaluation.py  fetch_category_samples.py  fetch_starcoder_samples.py  merge_web_samples.py  pyproject.toml  run_benchmark.py
baseline_method/src/labelshift/: __init__.py  classifier.py  data_utils.py  data_utils_starcoder.py  generate.py  inspect_viz.py  prior.py  run_labelshift.py  run_labelshift_starcoder.py  run_minkpp_mix.py  viz.py
bench/specs/: amber.yaml  codellama.yaml  llama-1.yaml  llama1.yaml  olmo1b.yaml  pythia.yaml  starcoder.yaml
scripts/: plot_ckpt_trends.py
