[project]
name = "data-anatomy"
version = "0.1.0"
description = "Mixture estimation and evaluation for language model training data"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "scikit-learn",
    "numpy",
    "pandas",
    "tqdm",
    "matplotlib",
    "pyyaml",
    "datasets",
    "accelerate",
    "seaborn",
    "tabulate",
    "zstandard",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.250",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

